--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="product-info">
                         <h3>Goku</h3>
-                        <p>Figura de Dragon Ball A</p>
+                        <p>Figura de Dragon Ball AAA</p>
                         <div class="product-price">$39.990</div>
                         <a href="#" class="btn">Añadir al carrito</a>
                     </div>
